# open_ai_rs

./: Cargo.toml
src/: main.rs
